# multicorn

./: .flake8  .gitignore  LICENSE  Makefile  README.md  app.py  app_bottle.py  event_build.py  http_message.c  ngru.c  pyproject.toml  setup.py  sonia.c  sonia.h  test.py
multicorn/: __init__.py  __main__.py  server.py  workers.py
sonia/: __init__.py  __main__.py  dd.py  event_loop.py  http_messages.py
