[tool.poetry]
name = "multicorn"
version = "0.1.0"
description = ""
authors = ["An Long <aisk1988@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"backports.interpreters" = "^0.2.0"

[tool.poetry.dev-dependencies]
mypy = "^1.14"
flake8 = "^5.0.4"
black = "^24.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
