[project]
name = "multicorn"
version = "0.2.0"
description = ""
authors = [
    { name = "An Long", email = "aisk1988@gmail.com" },
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "backports.interpreters>=0.3.0,<0.4.0",
]

[dependency-groups]
dev = [
    "black>=24.8,<25.0",
    "flake8>=5.0.4,<6.0.0",
    "mypy>=1.14,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
